# FluxReader.ai

./: .env  .env.example  .gitignore  app.py  readMe.md  requirements.txt  run_app.bat  run_app.sh  utils.py
.streamlit/: config.toml
chroma_storage_Tanush-Resume/: chroma.sqlite3
flux-reader-ai/: pyproject.toml
flux-reader-ai/flux_reader_ai/: app.py
temp/chromadb/storage_Tanush-Resume/: chroma.sqlite3
temp/chromadb/storage_conda-cheatsheet/: chroma.sqlite3
