[tool.poetry]
name = "flux-reader-ai"
version = "0.1.0"
description = ""
authors = ["tanush-em <tanushtm.work@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
pypdf2 = "^3.0.1"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
huggingface-hub = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
